# Clash-of-pirates

./: Cargo.toml  README.md  deployment.bundle.json  generate-vks.sh  local-option.sh  local_test_game_play.sh  package-lock.json  package.json  testnet-option.sh  typescript
clash-frontend/: index.html  package-lock.json  package.json  vite.config.ts
clash-frontend/public/circuits/: duel_commit_circuit.json
clash-frontend/scripts/: sync-duel-circuit.mjs
clash-frontend/src/: App.tsx  config.ts  index.css
clash-frontend/src/components/: ChallengeManager.css  ChallengeManager.tsx  Clashgamecomponents.css  Clashgamecomponents.tsx  Clashgameenhanced.css  Layout.css  Layout.tsx  LayoutAuth.css  OnChainTxPanel.css  OnChainTxPanel.tsx  PageLoading.css  PageLoading.tsx  (+5 more)
contracts/clash/: Cargo.toml  README.md
contracts/clash/src/: lib.rs  test.rs
contracts/clash_token/: Cargo.toml
contracts/oz-smart-account/: Cargo.toml
contracts/oz-smart-account/src/: contract.rs  lib.rs
contracts/points_tracker/: Cargo.toml
contracts/ultrahonk-soroban-contract/: Cargo.toml
duel_commit_circuit/: Nargo.toml  Prover.toml  package-lock.json  package.json
duel_commit_circuit/src/: main.nr
duel_reveal_circuit/: Nargo.toml  Prover.toml
duel_reveal_circuit/src/: main.nr
helper_circuit/: Nargo.toml  Prover.toml
helper_circuit/src/: main.nr
scripts/: bindings.ts  build-oz-smart-account-wasm.sh  deploy.ts  patch-smart-account-bindings-package.cjs  setup.ts
scripts/utils/: contracts.ts  vk-loader.ts
zk-backend/: package-lock.json  package.json  server.ts  tsconfig.json
(+40 files in other folders)
