[package]
name = "clash"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-accounts = "0.7.1"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-env-host = "25.0.0"
num-bigint = "0.4"
